Rolling releases: adjust SOABI prefix

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,16 @@ dnl ***********************************************
 dnl * Please run autoreconf to test your changes! *
 dnl ***********************************************
 
-# Set VERSION so we only need to edit in one place (i.e., here)
+# Set PYTHON_VERSION so we only need to edit in one place (i.e., here)
 m4_define(PYTHON_VERSION, 3.9)
+
+# Prior to the ABI freeze for a release, mark extension modules as being
+# built against a not yet stable version of the CPython ABI
+m4_define(CPYTHON_SOABI_PREFIX, "cpython_unstable")
+
+# Once the maintenance branch is created and the release ABI is locked,
+# the marker suffix is removed:
+# m4_define(CPYTHON_SOABI_PREFIX, "cpython")
 
 AC_PREREQ([2.69])
 
@@ -4607,28 +4615,40 @@ AC_C_BIGENDIAN
 # from the following attributes which affect the ABI of this Python build (in
 # this order):
 #
-# * The Python implementation (always 'cpython-' for us)
+# * The Python implementation ABI prefix (given in SOABI_PREFIX)
 # * The major and minor version numbers
 # * --with-pydebug (adds a 'd')
-#
-# Thus for example, Python 3.2 built with wide unicode, pydebug, and pymalloc,
-# would get a shared library ABI version tag of 'cpython-32dmu' and shared
-# libraries would be named 'foo.cpython-32dmu.so'.
+# * The Python ABI suffix (which is set to indicate a not-yet-stable ABI)
 #
 # In Python 3.2 and older, --with-wide-unicode added a 'u' flag.
 # In Python 3.7 and older, --with-pymalloc added a 'm' flag.
+#
+# Thus for example, Python 3.8 built with pydebug, would get a shared library
+# ABI version tag of 'cpython-38d' and shared libraries would be named
+# 'foo.cpython-38d.so'.
+#
+# Prior to the ABI freeze, the implementation prefix is "cpython_unstable",
+# so Python 3.9.0a1 built with pydebug would get a shared library ABI version
+# tag of 'cpython_unstable-32d' and shared libraries would be named
+# 'foo.cpython_unstable-32d.so'. This ensures that extension modules built
+# against a not-yet-stable version of the pre-release API won't be loaded by
+# the released interpreter.
+
+AC_SUBST(SOABI_PREFIX)
+SOABI_PREFIX=CPYTHON_SOABI_PREFIX
+
 AC_SUBST(SOABI)
 AC_MSG_CHECKING(ABIFLAGS)
 AC_MSG_RESULT($ABIFLAGS)
 AC_MSG_CHECKING(SOABI)
-SOABI='cpython-'`echo $VERSION | tr -d .`${ABIFLAGS}${PLATFORM_TRIPLET:+-$PLATFORM_TRIPLET}
+SOABI=`echo "${SOABI_PREFIX}-${VERSION}" | tr -d .`${ABIFLAGS}${PLATFORM_TRIPLET:+-$PLATFORM_TRIPLET}
 AC_MSG_RESULT($SOABI)
 
 # Release and debug (Py_DEBUG) ABI are compatible, but not Py_TRACE_REFS ABI
 if test "$Py_DEBUG" = 'true' -a "$with_trace_refs" != "yes"; then
   # Similar to SOABI but remove "d" flag from ABIFLAGS
   AC_SUBST(ALT_SOABI)
-  ALT_SOABI='cpython-'`echo $VERSION | tr -d .``echo $ABIFLAGS | tr -d d`${PLATFORM_TRIPLET:+-$PLATFORM_TRIPLET}
+  ALT_SOABI=`echo "${SOABI_PREFIX}-${VERSION}" | tr -d .``echo $ABIFLAGS | tr -d d`${PLATFORM_TRIPLET:+-$PLATFORM_TRIPLET}
   AC_DEFINE_UNQUOTED(ALT_SOABI, "${ALT_SOABI}",
             [Alternative SOABI used in debug build to load C extensions built in release mode])
 fi
